--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    STRIPE_WEBHOOK_SECRET: '%env(resolve:STRIPE_WEBHOOK_SECRET)%'
+    STRIPE_PK_TEST: '%env(resolve:STRIPE_PK_TEST)%'
+    STRIPE_SK_TEST: '%env(resolve:STRIPE_SK_TEST)%'
+    app.path.upload_base_url: http://localhost:8000/uploads
 
 services:
     # default configuration for services in *this* file
